# cpp-DPSK-modem

./: .gitignore  README.md
DPSK-modem/: CMakeLists.txt  domain.cpp  domain.h  dpsk_demodulator.cpp  dpsk_demodulator.h  dpsk_modulator.cpp  dpsk_modulator.h  gray_code.cpp  math_operations.cpp  math_operations.h  matrix.h  phase_synchronizator.cpp  phase_synchronizator.h  signal_parameters.cpp  signal_parameters.h  tests.cpp
cpp-DPSK-modulation/: CMakeLists.txt  dpsk_demodulator.cpp  dpsk_demodulator.h  dpsk_modulation.cpp  dpsk_modulation.h  dpsk_modulator.cpp  dpsk_modulator.h  gray_code.cpp  gray_code.h  main.cpp  math_operations.cpp  math_operations.h  signal_parameters.cpp  signal_parameters.h  tests.cpp
files-with-sample-for-tests/: samples_pos2.txt  samples_pos2_intermediate.txt  samples_pos2_shift_90.txt  samples_pos2_shift_90_intermediate.txt  samples_pos2_shift_minus_90.txt  samples_pos4.txt  samples_pos4_intermediate.txt  samples_pos4_shift_45.txt  samples_pos4_shift_45_intermediate.txt  samples_pos8.txt  samples_pos8_intermediate.txt  samples_pos8_shift_22.5.txt  samples_pos8_shift_22.5_intermediate.txt  send_bits_19200_1200_2pos.txt
images/: .$solution-UML.drawio.bkp  solution-UML.drawio
user-DPSK-modem/: CMakeLists.txt  main.cpp
